Spring repo added to project